# text-tagging-model

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: tests.yml
notebooks/: bart_with_ranker.ipynb  baseline_scoring.ipynb  clusterization_model.ipynb  data_union.ipynb  rake_extractor.ipynb  test.ipynb
src/: app.py  constants.py  logger_config.py
src/model/: metrics.py
src/models/: metrics.py
src/models/rake_extractor/: keyphrases_extractor.py  keyword_extractor.py
src/processing/analyzer/: word_vector_ranker.py
src/processing/normalizers/: text_normalizer.py
tests/test_src/test_model/: test_rake_extractor.py
tests/test_src/test_models/: test_metrics.py  test_rake_extractor.py
text_tagging_model/: logger_config.py
text_tagging_model/models/: base_extractor.py
text_tagging_model/models/attention_based_model/: attention_extractor.py  tags_extractor.py
text_tagging_model/models/bart_based_model/: __init__.py  tag_sum_extractor.py
text_tagging_model/models/rake_based_model/: __init__.py  keyphrases_extractor.py  keyword_extractor.py  tags_extractor.py
text_tagging_model/models/rake_extractor/: keyword_extractor.py
text_tagging_model/processing/: __init__.py  utils.py
text_tagging_model/processing/analyzer/: __init__.py  word_vector_ranker.py
text_tagging_model/processing/embedder/: base_embedder.py  fasttext_embedder.py  hg_embedder.py
text_tagging_model/processing/normalizers/: __init__.py  base_normalizer.py  nouns_keeper.py  pipe.py  punctuation_deleter.py  stopwords_deleter.py  text_normalizer.py
text_tagging_model/processing/ranker/: base_ranker.py  max_distance_ranker.py  text_sim_ranker.py
text_tagging_model/processing/summarizator/: bart_summarization.py
