[tool.poetry]
name = "text-tagging-model"
version = "0.1.0"
description = ""
authors = [
    "Pavel Kochkin <kochkin27@gmail.com>",
    "Shamil Nurkaev <nurkaievs1204@gmail.com>",
    "Denis <denison03@mail.ru>",
    "Stephan Olizko <uknwn>"
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
rouge = "^1.0.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
pymorphy2 = "^0.9.1"
nltk = "^3.8.1"
rake-nltk = "^1.0.6"
coloredlogs = "^15.0.1"
fasttext = {git = "https://github.com/facebookresearch/fastText"}


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
flake8 = "^6.0.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
ipykernel = "^6.29.4"
isort = "^5.13.2"
pre-commit = "^3.7.0"
black = "^24.3.0"
coverage = "^7.4.4"


[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]


[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true


[tool.coverage.run]
branch = true
source = ["src"]
command_line = "-m pytest"

[tool.coverage.report]
show_missing = true

# [tool.coverage.xml]
# output = "coverage.xml"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
